# minwada

./: .tool-versions  CLAUDE.md  README.en.md  README.md  TODO.md  justfile
backend/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.example
backend/.sqlx/: query-141c169fa8c2cc62fea33c8d14b64209c5d16433a1a96d8b3844cfe82ea829a6.json  query-1713a8c8b8742b0fdab4af5cd565cfcb4c05ec5f9182b95a0715f3c97e3b6c21.json  query-1722b01988010169fe002c59bbb3cb8576a6eedd94970016f3936ebe4dd82790.json  query-186c2d3ab06f16ac4e6afd2f2c2b0cf246c5fb35e8691e6c65a5514cb0e9bede.json  query-1acf8f38f59dbead979f4d1dd306cc7b2ce44e3d56cd81763188e970949a07c4.json  query-264894dcafd93539de0d21b2756b7e85621f998a9e0d59d25994408e7f189c1b.json  query-597eeea7d939867f17d5c47bc6864fc0d7000b37e6749ac051db5c492d15d4ae.json  query-5da79e5fd57e78214159c42e25aece579e18635461191f48477c418a6196742d.json  query-6b8847d2fc3e76f4bdb9eb883a4d17d7b6a61b301eddfce24455649f4061b745.json  query-73abc5cdec24f707ecccd8aa2f50faf74dd461207211ea9f5801f7cedcdb0015.json  query-8e2c942e34c37d99d6e109d8ba9eff31a3a22f4f790ed76ca4f089dbfa040587.json  query-9bccb52ac43b9db18af523d0c4a809dccddbfea25894e16b516f519dccc0cdf7.json  query-a0aa10c360748b529888989f7159919fe1e8c1fb7dd4477d5be59cabc9aa9d2c.json  query-a5f111f83aa16a81f7172f14dde8196b3c4e82c297f0dbbca75441a8b2f37e3b.json  query-acc73327a9efee0be6fbcedb1aac21f82562b8bd9e153accf332264e5f233291.json  query-b2603c617594c633b682eafbcca2ae5037fd61bd9fd16197bae1c4b025e8a8a2.json  query-d627e76e35ab1026e9479a14d8ef29c02170d43b4b923df88ad26cb0c6fc266b.json  query-f92aa785a2d5861b3e840070a95563b7f8bafb0aaa1e9d9429c5d43810007af2.json  query-f9f103b38935dbb0fef578b9f7a0557a0a1b4829f0fefee6d320d33ba108bc0e.json
backend/migrations/: 20241201000000_initial_schema.sql  20250606000000_add_email_verification.sql  20250606000001_add_password_reset.sql  20250606010000_add_thread_vote_counts.sql  20250606020000_create_votes_table.sql
backend/src/: auth.rs  config.rs  error.rs  main.rs  middleware.rs  routes.rs  utils_legacy.rs
backend/src/email/: mailgun.rs  mailhog.rs  mod.rs
backend/src/handlers/: auth.rs  comments.rs  mod.rs  threads.rs  users.rs
backend/src/handlers/auth/: change_password.rs  google_auth.rs  google_callback.rs  login.rs  logout.rs  mod.rs  refresh_token.rs  register.rs  request_password_reset.rs  (+2 more)
backend/src/models/: auth.rs  comments.rs  common.rs  mod.rs  threads.rs  users.rs
backend/src/test_utils/: mod.rs
backend/src/utils/: common.rs  email_sender.rs  email_verification.rs  mod.rs  password_reset.rs  password_reset_email.rs  token_hash.rs
backend/src/validations/: username.rs
(+74 files in other folders)
