[package]
name = "reddit-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = "0.8.0"
tokio = { version = "1.17", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"
oauth2 = "4.4"
sha2 = "0.10"
base64 = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenAPI
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = "0.2.0"

# Environment & Config
dotenvy = "0.15"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP Client (for OAuth)
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator = { version = "0.17", features = ["derive"] }
validator_derive = "0.17"
regex = "1.10"
lazy_static = "1.4"

# Time
time = "0.3"
backtrace-on-stack-overflow = "0.3.0"
